force-app/main/default/objects/QuoteLineItem/fields/Close_date__c.field-meta.xml
<CustomField>
    <fullName>Close_date__c</fullName>
    <formula>Quote.Opportunity.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close date</label>
    <type>Date</type>
</CustomField>