force-app/main/default/objects/QuoteLineItem/fields/Contract_Forward_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Contract_Forward_Date_Calculated__c</fullName>
    <formula>IF( Quote.Opportunity.RecordType.DeveloperName = &apos;Cloud&apos;,TEXT( MONTH(    Quote.Opportunity.Contract_End_date_forward__c ) ) &amp; &quot;/&quot; &amp; TEXT( DAY(  Quote.Opportunity.Contract_End_date_forward__c ) ) &amp; &quot;/&quot; &amp; TEXT( YEAR(  Quote.Opportunity.Contract_End_date_forward__c  ) ) , TEXT( MONTH(  Quote.Opportunity.Contract_End_date_forward__c ) ) &amp; &quot;/&quot; &amp; TEXT( DAY(  Quote.Opportunity.Contract_End_date_forward__c ) ) &amp; &quot;/&quot; &amp; TEXT( YEAR(  Quote.Opportunity.Contract_End_date_forward__c ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Forward Date Calculated</label>
    <type>Text</type>
</CustomField>