force-app/main/default/objects/QuoteLineItem/fields/Created_Date2__c.field-meta.xml
<CustomField>
    <fullName>Created_Date2__c</fullName>
    <formula>DATEVALUE(   Quote.CreatedDate  )</formula>
    <label>Created Date2</label>
    <type>Date</type>
</CustomField>