force-app/main/default/objects/QuoteLineItem/fields/Custom_Product_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Custom_Product_Type_Label__c</fullName>
    <formula>IF(TEXT(Custom_Product_Type__c) = &apos;DataCollection Client&apos;, &apos;Inventory Manager&apos;, TEXT(Custom_Product_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Product Type Label</label>
    <type>Text</type>
</CustomField>