force-app/main/default/objects/QuoteLineItem/fields/Custom_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Task_Type__c</fullName>
    <label>Custom Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Custom_Task</valueSetName>
    </valueSet>
</CustomField>