force-app/main/default/objects/QuoteLineItem/fields/Discounted_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Sales_Price__c</fullName>
    <formula>ROUND(Sales_Enhanced_Discount_Price__c - (Sales_Enhanced_Discount_Price__c  * Discount ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>