force-app/main/default/objects/QuoteLineItem/fields/Enhanced_Discount__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Discount__c</fullName>
    <label>Enhanced Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>