force-app/main/default/objects/QuoteLineItem/fields/Enhancement_Date__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Date__c</fullName>
    <formula>IF( Quote.Opportunity.RecordType.DeveloperName = &apos;Cloud&apos;,TEXT( MONTH(   Quote.Opportunity.Account.Enhancement_Date__c ) ) &amp; &quot;/&quot; &amp; TEXT( DAY( Quote.Opportunity.Account.Enhancement_Date__c ) ) &amp; &quot;/&quot; &amp; TEXT( YEAR( Quote.Opportunity.Account.Enhancement_Date__c  ) ) , TEXT( MONTH( Quote.Opportunity.Parent_Opportunity__r.Account.Enhancement_Date__c  ) ) &amp; &quot;/&quot; &amp; TEXT( DAY( Quote.Opportunity.Parent_Opportunity__r.Account.Enhancement_Date__c ) ) &amp; &quot;/&quot; &amp; TEXT( YEAR( Quote.Opportunity.Parent_Opportunity__r.Account.Enhancement_Date__c ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enhancement Date</label>
    <type>Text</type>
</CustomField>