force-app/main/default/objects/QuoteLineItem/fields/GetAccept_Discount_Verbiage__c.field-meta.xml
<CustomField>
    <fullName>GetAccept_Discount_Verbiage__c</fullName>
    <formula>IF(
    Discount &gt; 0,
    TEXT(FLOOR(Discount * 100)) &amp; &quot;.&quot; &amp;
    RIGHT(&quot;0&quot; &amp; TEXT(MOD(ROUND(Discount * 100, 2), 1) * 100), 2) &amp;  &quot;% off &quot; &amp; TEXT(Quote.Opportunity.Manual_Discount_Duration_Type__c),
    &quot;&quot;
)</formula>
    <label>GetAccept Discount Verbiage</label>
    <type>Text</type>
</CustomField>