force-app/main/default/objects/QuoteLineItem/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <inlineHelpText>Order in which the Line will display on the Quote PDF</inlineHelpText>
    <label>Line Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>