force-app/main/default/objects/QuoteLineItem/fields/of_Quote_Days__c.field-meta.xml
<CustomField>
    <fullName>of_Quote_Days__c</fullName>
    <formula>IF 
    (Quote.Opportunity.RecordType.DeveloperName = &apos;Cloud&apos;,    
        IF(
            AND (NOT(ISBLANK(Quote.Opportunity.Contract_Start_Date_forward__c)),NOT(ISBLANK(Quote.Opportunity.Contract_End_date_forward__c))),
            TEXT( 
                 (Quote.Opportunity.Contract_End_date_forward__c  - Quote.Opportunity.Contract_Start_Date_forward__c) +                   
                 (Quote.Opportunity.Account.Enhancement_Date__c -  Created_Date2__c)
                ),
            TEXT(
                 Quote.Opportunity.Account.Enhancement_Date__c -  Created_Date2__c
                )
        ),        
        IF(
            AND (NOT(ISBLANK(Quote.Opportunity.Contract_Start_Date_forward__c)),NOT(ISBLANK(Quote.Opportunity.Contract_End_date_forward__c  ))),
            TEXT( 
                 (Quote.Opportunity.Contract_End_date_forward__c  - Quote.Opportunity.Contract_Start_Date_forward__c) +                   
                 (Quote.Opportunity.Parent_Opportunity__r.Account.Enhancement_Date__c - Created_Date2__c)
                ),
            TEXT(
                 Quote.Opportunity.Parent_Opportunity__r.Account.Enhancement_Date__c - Created_Date2__c
                )
        )
    )</formula>
    <label># of Quote Days</label>
    <type>Text</type>
</CustomField>