force-app/main/default/objects/QuoteLineItem/fields/Perpetual_Enhancement_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Perpetual_Enhancement_Sales_Price__c</fullName>
    <formula>IF( Quote.Opportunity.RecordType.DeveloperName = &apos;Cloud&apos;,   Standard_Cost__c  , Standard_Cost__c *0.85)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perpetual Enhancement Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>