force-app/main/default/objects/QuoteLineItem/fields/Perpetual_Prorated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Perpetual_Prorated_Amount__c</fullName>
    <formula>(  UnitPrice /365)* (IF( Quote.Opportunity.RecordType.DeveloperName = &apos;Cloud&apos;, (Quote.Opportunity.Account.Enhancement_Date__c - Created_Date2__c), ( Quote.Opportunity.Parent_Opportunity__r.Account.Enhancement_Date__c - Created_Date2__c) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perpetual Prorated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>