force-app/main/default/objects/QuoteLineItem/fields/Perpetual_Prorated_Total__c.field-meta.xml
<CustomField>
    <fullName>Perpetual_Prorated_Total__c</fullName>
    <formula>&quot;$&quot; + &apos; &apos; +text(ROUND(Perpetual_Prorated_Amount__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perpetual Prorated Total</label>
    <type>Text</type>
</CustomField>