force-app/main/default/objects/QuoteLineItem/fields/Pricebook_entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_entry_Id__c</fullName>
    <formula>PricebookEntry.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook entry Id</label>
    <type>Text</type>
</CustomField>