force-app/main/default/objects/QuoteLineItem/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <formula>Quote.Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Name</label>
    <type>Text</type>
</CustomField>