force-app/main/default/objects/QuoteLineItem/fields/Product_Code_rollup__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_rollup__c</fullName>
    <label>Product Code rollup</label>
    <length>225</length>
    <type>Text</type>
</CustomField>