force-app/main/default/objects/QuoteLineItem/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Brings in the Product Family picklist value from the Product Object onto the Quote Line Item</description>
    <formula>TEXT( Product2.Family )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>