force-app/main/default/objects/QuoteLineItem/fields/Product_family_Custom__c.field-meta.xml
<CustomField>
    <fullName>Product_family_Custom__c</fullName>
    <label>Product family Custom</label>
    <length>90</length>
    <type>Text</type>
</CustomField>