force-app/main/default/objects/QuoteLineItem/fields/Prorated_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Prorated_List_Price__c</fullName>
    <formula>IF( Quote.Type__c = &quot;Existing Business&quot;,(PricebookEntry.UnitPrice* Quantity  /365)* Quote.Contract_Terms__c ,  UnitPrice * Quantity )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorated List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>