force-app/main/default/objects/QuoteLineItem/fields/Prorated_Price__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Price__c</fullName>
    <label>Prorated Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>