force-app/main/default/objects/QuoteLineItem/fields/Prorated_Sales_Price_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Sales_Price_Subscription__c</fullName>
    <formula>IF( TEXT(PricebookEntry.Product2.Family) = &quot;SALESPAD_SUBSCRIPTION&quot; || TEXT(PricebookEntry.Product2.Family) = &quot;DESKTOP_SUBSCRIPTION&quot; || TEXT(PricebookEntry.Product2.Family) = &quot;INTELLIGENCE&quot;, (UnitPrice /365)* Quote.Contract_Terms__c , UnitPrice )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorated Sales Price(Subscription)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>