force-app/main/default/objects/QuoteLineItem/fields/Prorated_Total_Price_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Total_Price_Subscription__c</fullName>
    <formula>Prorated_Sales_Price_Subscription__c  *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorated Total Price (Subscription)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>