force-app/main/default/objects/QuoteLineItem/fields/Sales_Enhanced_Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Enhanced_Discount_Price__c</fullName>
    <formula>( ( UnitPrice - ( UnitPrice * Sales_Discount__c))- ( ( UnitPrice - ( UnitPrice * Sales_Discount__c))* Enhanced_Discount__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Enhanced Discount Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>