force-app/main/default/objects/QuoteLineItem/fields/Standard_Cost__c.field-meta.xml
<CustomField>
    <fullName>Standard_Cost__c</fullName>
    <formula>IF( Product_Family__c = &quot;DESKTOP_PRODUCTS&quot;,  ((Product2.Standard_Cost__c) - (Product2.Standard_Cost__c* Discount )) , (Product2.Standard_Cost__c)/365 *(   VALUE(of_Quote_Days__c ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>