force-app/main/default/objects/QuoteLineItem/fields/Standard_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Standard_Cost_Total__c</fullName>
    <formula>&quot;$&quot; + &apos; &apos; +text(ROUND( Standard_Cost__c , 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Cost Total</label>
    <type>Text</type>
</CustomField>