force-app/main/default/objects/QuoteLineItem/fields/Standard_Pricebook_Amount__c.field-meta.xml
<CustomField>
    <fullName>Standard_Pricebook_Amount__c</fullName>
    <label>Standard Pricebook Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>