force-app/main/default/objects/QuoteLineItem/fields/Total_Price_0__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_0__c</fullName>
    <description>Must return as text value to work with GetAccept functionality</description>
    <formula>IF( Total_Price_Custom__c &gt; 0, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <label>Total Price &gt; 0?</label>
    <type>Text</type>
</CustomField>