force-app/main/default/objects/QuoteLineItem/fields/Total_Price_Custom__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Custom__c</fullName>
    <formula>(UnitPrice-(UnitPrice*Discount))  *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Custom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>