force-app/main/default/objects/QuoteLineItem/fields/Work_Description__c.field-meta.xml
<CustomField>
    <fullName>Work_Description__c</fullName>
    <label>Work Description</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>