force-app/main/default/objects/QuoteLineItem/validationRules/QuoteLineValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>QuoteLineValidation</fullName>
    <active>true</active>
    <description>removed ISCHANGED(Discount) from VR and made it read only on the page layout.</description>
    <errorConditionFormula>AND(
				$Permission.EditReadOnlyFields = FALSE,
    Quote.RecordType.DeveloperName  == &apos;Desktop&apos;,
				OR(
								ISCHANGED(Quantity), 
								ISCHANGED(UnitPrice)
				)
)</errorConditionFormula>
    <errorMessage>Quantity, Sales Price, and Discount cannot be updated here. Please navigate to the Manage CB Product screen to make this change.</errorMessage>
</ValidationRule>