force-app/main/default/objects/QuoteLineItem/validationRules/Required_Notes_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Notes_Field</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISBLANK(Comments__c),
     $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Notes Field is Required</errorMessage>
</ValidationRule>